--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
+    "@types/node": "^14.14.33",
+    "@types/react": "^17.0.3",
+    "@types/styled-components": "^5.1.7",
+    "babel-plugin-styled-components": "^1.8.0",
+    "typescript": "^4.2.3"
   },
   "license": "MIT"
 }
