--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-html-parser": "^2.0.2",
     "react-is": "^16.8.0",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
