--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
     "@types/axios": "^0.14.0",
-    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^4.2.0",
     "react-is": "^16.8.0",
-    "react-router-dom": "^5.2.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
